revision de html validador

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="ubicacion">
                     <img src="assets/img/map-marker.png" alt="Icono de marcador de mapa">
                     <p>Seattle</p>
-                </div class>
+                </div>
                 <div class="informacion">
                     <p>Developer | Engineer | Problem Solver </p>
                     <p> Master of shadows and the Internet!</p>
